Fix background and positioning.

--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
 		</ul>
   </header>
  <img class="profile" src="headshot.jpg"></img>
- <img class="mainstay" src="Damascus.jpg"></img>
  <footer>
   <ul class="bottombar">
-   <a href="www.githubcom">Github</a>
-   <a href="www.twitter.com">Twitter</a>
-   <a href="www.linkedin.com">LinkedIn</a>
+   <a href="http://www.githubcom">Github</a>
+   <a href="http://www.twitter.com">Twitter</a>
+   <a href="http://www.linkedin.com">LinkedIn</a>
   </ul>
  </footer>
 
 </body>
 
 </html>
- <! script $("button").on("hover", function(){ alert("clicked") }) script >
